assets/css/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  min-height: 100%;
  box-sizing: border-box;
  font-family: "JetBrains Mono", monospace;
}

body {
  background: #020617;
}

.site-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
  display: flex;
  padding: 2rem 8%;
}

.site-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  font-size: 12px;
}

.nav-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.logo {
  text-decoration: none;
  color: #00ff95;
  font-size: 0.875rem;
  line-height: 1.25rem;
  list-style: none;
}

.partial-logo {
  letter-spacing: 0.2rem;
}

.nav-right {
  display: none;
}

.hamburger-menu-btn {
  background-color: transparent;
  color: #ffffff;
  border: transparent;
  border-radius: 4px;
}

.mobile-menu {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background: rgba(5, 7, 13, 0.96);
  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
  padding: 30px 46px 50px;
  z-index: 1000;
}

.mobile-menu.open {
  display: block;
  position: fixed;
  inset: 0;
  background: rgba(5, 7, 13, 0.96);
  z-index: 2;
}

.close-menu-btn {
  position: absolute;
  top: 2rem;
  right: 8%;
  background: transparent;
  border: none;
  color: #fff;
  cursor: pointer;
  padding: 0;
}

.mobile-nav-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.mobile-nav-list li {
  color: #9ca0b8;
  font-family: "JetBrains Mono", monospace;
  font-size: 14px;
  letter-spacing: 3px;
  padding: 10px 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
}

.hero {
  position: relative;
  min-height: 100vh;
  overflow: visible;

  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.hero::before {
  content: "";
  position: absolute;
  inset: 0;

  background-image: url("../images/home-background.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  z-index: 0;
}

.hero::after {
  content: "";
  position: absolute;
  inset: 0;

  background: linear-gradient(rgba(2, 6, 23, 0.7), rgba(2, 6, 23, 0.95));

  z-index: 1;
}

.hero-content {
  position: relative;
  z-index: 2;
  padding: 80px 8% 0;
}

.hero-content.hidden {
  display: none;
}

.job-title {
  color: #00ff95;
  text-transform: uppercase;
  text-align: center;
  opacity: 0;
  transform: translateY(20px);
  animation: fadeInUp 0.8s ease-out forwards;
}

.button-container {
  display: flex;
  justify-content: center;
  gap: 0.5;
  align-items: center;
  font-family: "JetBrains Mono", monospace;
  gap: 1.5rem;
  font-size: 0.875rem;
}

.projects-btn {
  text-transform: uppercase;
  color: #07080e;
  background-color: #00ff95;
  border: transparent;
  padding: 8px 20px;
  line-height: 1.25rem;
  letter-spacing: 0.05em;
}

.contact-btn {
  text-transform: uppercase;
  color: #00ff95;
  background-color: #07080e;
  border: 1px solid #00ff95;
  padding: 8px 20px;
  line-height: 1.25rem;
  letter-spacing: 0.05em;
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(20px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.sub-hero-content {
  text-align: center;
  text-transform: uppercase;
  font-family: "Inter", sans-serif;
  font-size: 48px;
  font-weight: 900;
  opacity: 0;
  transform: translateY(40px);

  animation: floatUp 0.8s ease-out forwards;
}

@keyframes floatUp {
  from {
    opacity: 0;
    transform: translateY(40px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.hero-background-code {
  display: none;
}

.sub-text {
  font-size: 14px;
  font-family: "JetBrains Mono", monospace;
  color: #8b8fa7;
  line-height: 1.625;
  max-width: 500px;
}

.system-status-container {
  display: none;
}

.next-section {
  background-color: transparent;
  color: #00ff95;
  border: none;
  animation: bounce 1.5s ease-in-out infinite;
}

@keyframes bounce {
  0%,
  100% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(10px);
  }
}

#about,
#projects,
#skills,
#contact {
  min-height: 100vh;
}

@media (min-width: 768px) {
  .hero {
    background-position: center;
  }

  .hamburger-menu {
    display: none;
  }

  .mobile-menu,
  .mobile-menu.open {
    display: none !important;
  }

  .nav-right {
    display: flex;
    gap: 25px;
    color: white;
    list-style: none;
    text-decoration: none;
  }

  .hero-content {
    padding: 200px 8% 0;
  }

  .system-status-container {
    display: flex;
    padding: 20px;

    margin-top: -100px;
    position: relative;
    z-index: 10;
  }

  .system-status {
    left: 2rem;
    bottom: 2rem;
    width: 200px;
    padding: 0.875rem;
    background: rgba(2, 6, 23, 0.85);
    border: 1px solid rgba(148, 163, 184, 0.15);
    color: #00ff9c;
    font-family: "JetBrains Mono", monospace;
    z-index: 20;
  }

  .system-status h6 {
    margin: 0 0 1.5rem;
    font-size: 10px;
    letter-spacing: 0.2em;
  }

  .system-status p {
    margin: 0.75rem 0;
    font-size: 9px;
  }

  .system-status span {
    color: #64748b;
  }

  .system-status strong {
    color: #00ff9c;
    font-weight: 700;
  }
}

@media (min-width: 1024px) {
  .hero {
    background-position: center;
  }

  .hero-content {
    padding: 100px 8% 0;
  }

  .sub-hero-content {
    font-size: 64px;
  }

  .hero-background-code {
    display: block;
    position: absolute;
    top: 47%;
    left: 45%;
    z-index: 1;
    opacity: 0.3;
    color: #9ca0b8;
    pointer-events: none;

    width: 70%;
    max-width: 80px;

    font-size: 12px;
    line-height: 1.6;
  }

  .line-number {
    color: #00ff95;
    font-weight: 700;
    display: inline-block;
    width: 2.5rem;
  }
}

@media (min-width: 1440px) {
  .hero-content {
    padding: 60px 8% 0;
  }

  .sub-hero-content {
    font-size: 112px;
  }

  .sub-text {
    margin-left: 20.5%;
  }

  .system-status-container {
    margin-top: -200px;
  }
}

